<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <string name="escolha_do_app">Escolha do app:</string>
    <string name="escolha_opcao_abaixo">Escolha uma opção abaixo:</string>
    <string name="resultado">Resultado:</string>
    <string name="voce_perdeu">Você perdeu :(</string>
    <string name="voce_ganhou">Você ganhou! ;)</string>
    <string name="empate">Empate!</string>
    <string name="btn_pedra">Botão pedra.</string>
    <string name="btn_papel">Botão papel.</string>
    <string name="btn_tesoura">Botão tesoura.</string>
</resources>